@@ -21,8 +21,6 @@ import static org.operaton.bpm.engine.authorization.Permissions.UPDATE;
 import static org.operaton.bpm.engine.authorization.Resources.TASK;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.operaton.bpm.engine.authorization.Permissions;
@@ -194,8 +192,8 @@ public class DefaultUserPermissionsForTaskTest extends AuthorizationTest {
 
     // then
     assertThat(authorizationService.isUserAuthorized(userId2, List.of(groupId), Permissions.READ, Resources.TASK, taskId)).isTrue();
-    assertThat(authorizationService.isUserAuthorized(userId2, Arrays.asList(groupId), Permissions.TASK_WORK, Resources.TASK, taskId)).isTrue();
-    assertThat(authorizationService.isUserAuthorized(userId2, Arrays.asList(groupId), Permissions.UPDATE, Resources.TASK, taskId)).isFalse();
+    assertThat(authorizationService.isUserAuthorized(userId2, List.of(groupId), Permissions.TASK_WORK, Resources.TASK, taskId)).isTrue();
+    assertThat(authorizationService.isUserAuthorized(userId2, List.of(groupId), Permissions.UPDATE, Resources.TASK, taskId)).isFalse();
 
     deleteTask(taskId, true);
   }
@@ -214,8 +212,8 @@ public class DefaultUserPermissionsForTaskTest extends AuthorizationTest {
     processEngine.getTaskService().addCandidateGroup(taskId, groupId);
 
     // then
-    assertThat(authorizationService.isUserAuthorized(userId2, Arrays.asList(groupId), Permissions.READ, Resources.TASK, taskId)).isTrue();
-    assertThat(authorizationService.isUserAuthorized(userId2, Arrays.asList(groupId), Permissions.UPDATE, Resources.TASK, taskId)).isTrue();
+    assertThat(authorizationService.isUserAuthorized(userId2, List.of(groupId), Permissions.READ, Resources.TASK, taskId)).isTrue();
+    assertThat(authorizationService.isUserAuthorized(userId2, List.of(groupId), Permissions.UPDATE, Resources.TASK, taskId)).isTrue();
 
     deleteTask(taskId, true);
   }
